variables.RunFour.scala.error
Erreur de compilation :
RunFour:8: error: not found: value cookie
if (cookie=4) {
    ^RunFour:9: error: not found: value stop
  stop();
  ^