variables.RunFour.scala.code
var cookies:Int =0

while (estSurBiscuit)
	cookies=cookies+1;



if (cookie=4) {
  stop();
}	else {
  avance();
}
